Add Expectimax AI and refactor AI classes
- Implemented Expectimax-style stochastic search for move selection.

- Integrated Expectimax alongside Random and Heuristic AI using the shared AiPlayer interface.

- Added a shared BoardEvaluator to centralise heuristic evaluation and remove duplicated logic.

- Refactored AI classes for improved readability and consistency.

- Tested Heuristic and Expectimax across both player configurations and verified all existing tests pass.